# emoji-speech-translator

./: Dockerfile  LICENSE  README.md  index.html  main.js  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_tests.py  styles.css
docs/: CSE 210_ Emoji-Speech Translator Project Specs.md
k8s/: deployment.yaml  service.yaml
src/: Translation.py  config.py  server.py  translator.py  utils.py
src/backend/: config.py  server.py  translator.py  translator_prompt.md
src/frontend/: README_TESTING.md  apiClient.js  config.js  emojiMapper.js  index.html  main.js  styles.css  test_emoji_mapper.js  test_request.js  test_runner.html  test_runner.js
src/hugging_face/: requirements.in  requirements.txt  test_inference.py  test_rouge.py
src/models/: __init__.py
tests/: test_performance.py
